infra/k8s/observability/overlays/prod/patch-elasticsearch-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          resources:
            requests:
              cpu: "1"
              memory: 4Gi
            limits:
              cpu: "3"
              memory: 8Gi
